# reddhog

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt
src/reddhog/: __init__.py  cli.py  config.py  models.py  settings.py  utils.py  warmup.py
src/reddhog/clients/: __init__.py  base.py  browser.py  cooldown.py  images.py  json_client.py
src/reddhog/persistence/: __init__.py  manager.py
src/reddhog/scraper/: __init__.py  core.py
tests/: test_browser_client.py  test_cli.py  test_config_profile_base.py  test_cooldown.py  test_reddhog.py  test_scraper_core.py
